# SemPKM

./: .env  .gitignore  CLAUDE.md  CODEBASE.md  docker-compose.federation-test.yml  docker-compose.test.yml  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/admin/: router.py
backend/app/auth/: dependencies.py  models.py  rate_limit.py  router.py  schemas.py  service.py  tokens.py
backend/app/browser/: _helpers.py  comments.py  events.py  favorites.py  objects.py  pages.py  router.py  search.py  settings.py  tag_tree.py  workspace.py
backend/app/canvas/: __init__.py  router.py  schemas.py  service.py
backend/app/commands/: __init__.py  dispatcher.py  exceptions.py  router.py  schemas.py
backend/app/dashboard/: models.py  router.py  service.py
backend/app/db/: engine.py  session.py
backend/app/debug/: router.py
backend/app/events/: __init__.py  models.py  query.py  store.py
backend/app/favorites/: models.py
backend/app/federation/: __init__.py  inbox.py  patch.py  router.py  schemas.py  service.py  signatures.py  webfinger.py
backend/app/health/: router.py
backend/app/indieauth/: __init__.py  models.py  router.py  schemas.py  scopes.py  service.py
backend/app/lint/: broadcast.py  (+3 more)
backend/migrations/: env.py
backend/scripts/: migrate_provo.py
backend/sempkm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_tokens.py  test_class_creation.py  test_comments.py  test_dashboard.py  test_dashboard_builder.py  test_event_user_lookup.py  test_explorer_modes.py  test_favorites.py  test_federation_discovery.py  test_hierarchy_explorer.py  test_iri_validation.py  test_model_analytics.py  test_model_refresh.py  test_mount_explorer.py  test_obsidian_scanner.py  test_ontology_service.py  test_ops_log.py  test_provo_migration.py  test_query_service.py  test_rdf_serialization.py  test_sparql_client.py  test_sparql_utils.py  test_tag_explorer.py  test_tag_splitting.py  test_tag_suggestions.py  test_tag_tree_builder.py  test_values_injection.py  test_vfs_scope.py  test_workflow.py  test_workflow_builder.py
(+1911 files in other folders)
